# CudaProject

./: .gitignore  CMakeLists.txt  README.md
include/: gemm.cuh
scripts/: plot_benchmark.py  run_benchmark.sh
src/: main.cu  runner.cu
src/kernels/: 01_naive.cu  02_coalescing.cu  03_smem_tiling.cu  04_1d_blocktiling.cu  05_2d_blocktiling.cu  06_vectorized.cu  07_warptiling.cu
